# ShieldEye_ComplianceScan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =2.5.0  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  config.py  conftest.py  distro_utils.py  docker-compose.dev.yml  docker-compose.yml  install_deps.py  main.py  main_gtk.py  pyproject.toml  requirements.txt  run.sh  style.qss
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  security-scan.yml
ComplianceScan Legacy/: LICENSE  README.md  config.py  reporter.py  requirements.txt  scanner.py
api/routes/: monitoring.py  policies.py
backend/: __init__.py
backend/api/: __init__.py  rest.py
backend/cli/: advanced.py  basic.py
backend/core/: __init__.py  analysis.py  backend.py  exceptions.py  scanner.py
backend/utils/: config.py  (+6 more)
benchmark/: __init__.py  engine.py  orchestrator.py
docs/: INTEGRATION_GUIDE.md  MIGRATION_GUIDE.md  OBSERVABILITY_GUIDE.md  policy_schema.md
gtk_gui/: __init__.py  main.py
integrations/: __init__.py  core_client.py  correlation.py  surfacescan_client.py
policy/: __init__.py  validator.py
reporting/: __init__.py  generator.py  grc_exporters.py  grc_payload_formatters.py  wizard.py
scripts/: bootstrap.sh
shieldeye_compliancescan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: locustfile.py  test_backend_core.py  test_benchmark.py  test_compatibility.py  test_database.py  test_integrations.py  test_load.py  test_performance.py  test_policy.py  test_rate_limiter.py  test_reporting.py  test_validators.py
(+35 files in other folders)
